Fix narrow white space above carousel

--- a/bootstrap_overrides.css
+++ b/bootstrap_overrides.css
@@ -111,7 +111,7 @@
   }
 
   .carousel-item {
-    margin-top: 53px;
+    margin-top: 52.5px;
   }
 
   .page-footer {
